--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" async></script>
+        <script src="index.js" async></script>
         <title>My Webpage</title>
     </head>
-    <body>
+    <body id="background">
         <div class="fadeIn">
             <h1>Hello, what is your name?</h1>
-            <input autocomplete="off" autofocus type="text">
+            <input spellcheck="false" autocomplete="off" autofocus type="text">
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+        <div class="project-container1">
+            <div id="firstP">hi</div>
+            <div id="secondP">hi</div>
+        </div>
+        <div class="project-container2">
+            <div id="thirdP">hi</div>
+            <div id="fourthP">hi</div>
+        </div>
     </body>
 </html>
