added temp boxes

--- a/index.html
+++ b/index.html
@@ -10,18 +10,44 @@
         <script src="index.js" async></script>
         <title>My Webpage</title>
     </head>
-    <body id="background">
+    <body>
         <div class="fadeIn">
             <h1>Hello, what is your name?</h1>
-            <input spellcheck="false" autocomplete="off" autofocus type="text">
+            <div>
+                <input id="ask-name" spellcheck="false" autocomplete="off" autofocus type="text">
+            </div>
         </div>
-        <div class="project-container1">
-            <div id="firstP">hi</div>
-            <div id="secondP">hi</div>
+        <div class="project-container">
+            <div>
+                <div id="firstP"></div>
+                <div class="nosho">
+                    <p>what this is</p>
+                    <a>See the code</a>
+                </div>
+            </div>
+            <div>
+                <div id="secondP"></div>
+                <div class="nosho">
+                    <p>what this is</p>
+                    <a>See the code</a>
+                </div>
+            </div>
         </div>
-        <div class="project-container2">
-            <div id="thirdP">hi</div>
-            <div id="fourthP">hi</div>
+        <div class="project-container">
+            <div>
+                <div id="thirdP"></div>
+                <div class="nosho">
+                    <p>what this is</p>
+                    <a>See the code</a>
+                </div>
+            </div>
+            <div>
+                <div id="fourthP"></div>
+                <div class="nosho">
+                    <p>what this is</p>
+                    <a>See the code</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
