added proper fade out/in

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="fadeIn">
-            <h1>Hello, what is your name?</h1>
+            <h1 id="change">Hello, what is your name?</h1>
             <div>
                 <input id="ask-name" spellcheck="false" autocomplete="off" autofocus type="text">
             </div>
